# ChangeLog for media-gfx/printoxx
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  03 Oct 2008; Robert Steen (Gandalf) <gandalf@vebbe.se>
  +printoxx-1.6.ebuild:
  Version bumb for Printoxx. Keeping v. 1.5 as new function are experimental
  in this new release.

  28 Sep 2008; Robert Steen (Gandalf) <gandalf@vebbe.se>
  -printoxx-1.4.1.ebuild, +printoxx-1.5.ebuild:
  Version bumb for Printoxx.

  20 Sep 2008; Robert Steen (Gandalf) <gandalf@vebbe.se>
  -printoxx-1.4.ebuild, +printoxx-1.4.1.ebuild:
  Version bumb for printoxx.

  18 Sep 2008; Robert Steen (Gandalf) <gandalf@vebbe.se>
  -printoxx-1.3.2.ebuild, +printoxx-1.4.ebuild:
  Version bumb for printoxx.

  09 Sep 2008; Robert Steen (Gandalf) <gandalf@vebbe.se>
  -printoxx-1.3.ebuild, +printoxx-1.3.2.ebuild:
  Version bumb for printoxx.

  08 Sep 2008; Robert Steen (Gandalf) <gandalf@vebbe.se>
  -printoxx-1.2.ebuild, +printoxx-1.3.ebuild:
  Version bumb for printoxx

  03 Sep 2008; Robert Steen (Gandalf) <gandalf@vebbe.se>
  +printoxx-1.2.ebuild, +metadata.xml:
  New Ebuild for bug 236499 thanks to dzhus and chithead for all help
