@@ -1,6 +1,4 @@
-DIST printoxx-1.5.tar.gz 477064 RMD160 b36eac9c98301459514fd9161aea2a395ebd858a SHA1 5ae7cebc9d14127569184a4fd544eb6373f0c868 SHA256 2fcb61f601eab511bd5b36c75c5d4aa4d6e65b1743f922cb033bce8377980797
 DIST printoxx-1.6.tar.gz 477798 RMD160 26ca7676ff6dc0b084d7c19f606ea9171ce24489 SHA1 b78dc76346c71a2db9d02f4d40f41d82052792f6 SHA256 103a0a2ff22d79500ec686bc318f63a1e6af1dc30fec0136a24f7ad3ce8f41ea
-EBUILD printoxx-1.5.ebuild 732 RMD160 895e1dce63bbaea33759052cbeb6977c58a3150d SHA1 c430242091ad75b8a2bde2737aaf074d683452bd SHA256 6eed9928a316e307cd13acf8808fc00dd36e5776a4b47abe179a69fb696f7729
 EBUILD printoxx-1.6.ebuild 732 RMD160 895e1dce63bbaea33759052cbeb6977c58a3150d SHA1 c430242091ad75b8a2bde2737aaf074d683452bd SHA256 6eed9928a316e307cd13acf8808fc00dd36e5776a4b47abe179a69fb696f7729
-MISC ChangeLog 1140 RMD160 6f143ae2ef49ec33a3b087793fcefb528ddd4339 SHA1 1c81396ca4423c0e21d10a71d886b2996d73d748 SHA256 ebd18562c907978c274eec9e4efac36e326092886b281f248cd9987ae7e5e930
+MISC ChangeLog 1245 RMD160 2f4f58190b35542c32161a035b84deb91fb95ec1 SHA1 ab5a2389bc4395a290c693337469c194401e7479 SHA256 e2c09d3616c5c60acd2b4aaa29c698fb89174429689ffcc8386d6844cdb0340e
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
