@@ -2,6 +2,10 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  09 Oct 2008; Robert Steen (Gandalf) <gandalf@vebbe.se>
+  -printoxx-1.5.ebuild:
+  Removed old version.
+
   03 Oct 2008; Robert Steen (Gandalf) <gandalf@vebbe.se>
   +printoxx-1.6.ebuild:
   Version bumb for Printoxx. Keeping v. 1.5 as new function are experimental
